--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>title</h1>
-  <p>본문 텍스트 noto sans kr</p>
+  <header>
+    <div class="container">
+      <a href="/" class="logo">
+        <img src="images/Logo.svg" alt="Doolee">
+      </a>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
