--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
       </nav>
     </div>
   </header>
+
+  <!-- main visual -->
+  <div class="main-visual">
+    <div class="container">
+      <img src="images/main-visual.png" alt="doolee">
+    </div>
+  </div>
+
+  <!-- portfolio(main) -->
+
+  <!-- footer  -->
 </body>
 </html>
