46.Main 작품 목록 영역

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -29,8 +29,45 @@
       <img src="images/main-visual.png" alt="doolee">
     </div>
   </div>
-
+  
   <!-- portfolio(main) -->
+  <main id="portfolio">
+    <h1>portfolio</h1>
+    <ul class="item-list container">
+      <li>
+        <img src="images/box1.jpg" alt="작품1">
+        <h3>작품명1</h3>
+      </li>
+      <li>
+        <img src="images/box2.jpg" alt="작품2">
+        <h3>작품명2</h3>
+      </li>
+      <li>
+        <img src="images/box3.jpg" alt="작품3">
+        <h3>작품명3</h3>
+      </li>
+      <li>
+        <img src="images/box4.jpg" alt="작품4">
+        <h3>작품명4</h3>
+      </li>
+      <li>
+        <img src="images/box5.jpg" alt="작품5">
+        <h3>작품명5</h3>
+      </li>
+      <li>
+        <img src="images/box6.jpg" alt="작품6">
+        <h3>작품명6</h3>
+      </li>
+      <li>
+        <img src="images/box7.jpg" alt="작품7">
+        <h3>작품명7</h3>
+      </li>
+      <li>
+        <img src="images/box8.jpg" alt="작품8">
+        <h3>작품명8</h3>
+      </li>
+    </ul>
+  </main>
 
   <!-- footer  -->
 </body>
