--- a/index.html
+++ b/index.html
@@ -70,5 +70,16 @@
   </main>
 
   <!-- footer  -->
+  <footer>
+    <div class="container">
+      <img src="images/footer-logo.svg" alt="Doolee" class="footer-logo">
+      <div class="icons">
+        <img src="images/lets-icons_insta.svg" alt="instagram">
+        <img src="images/line-md_youtube.svg" alt="youtube">
+        <img src="images/ri_blogger-line.svg" alt="blog">
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
