49.모바일 스타일

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+        <button class="toggle">
+          <img src="images/material-symbols_menu.svg" alt="toggle">
+        </button>
       </nav>
     </div>
   </header>
